welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:22: error: value gauche is not a member of Unit
 	recule(4);}gauche();avance(4);droite()}
                   ^