welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def FaireMotif() {
	var j = Color.YELLOW
	var r = Color.RED
	var b = Color.BLUE
	var g = Color.GREEN
	def FaireL(c:Color) {
		gauche();avance();setCouleurBrosse(c); baisseBrosse();leveBrosse()
		recule(); droite(); avance(); baisseBrosse(); leveBrosse();avance(2)
	}
	for (i <- 1 to 4)
	 {if ( i == 1)
		{FaireL(r); gauche()}
	  else {if (i==2) {FaireL(b); gauche()}
	  		else { if (i==3) {FaireL(g); gauche()}
	  				else {FaireL(j); gauche()}}}}}
	for (i <- 1 to 2)
 {for (y <- 1 to 2)
 	{FaireMotif(); if (y==1) {avance(4)}}
 	if (i ==1) {
 	recule(4);}gauche();avance(4);droite()}
}
